# Titan-AI-Repository-Optimization

./: .gitignore  README.md  requirements.txt
reports/: llama_index-main_20260717_145613.md  llama_index-main_20260717_151852.md
titan/: LICENSE  README.md  __init__.py  main.py  pyproject.toml
titan/analyzer/: __init__.py  framework_detector.py  gpu_detector.py  language_detector.py  repository_type_detector.py  scanner.py
titan/classifier/: __init__.py  classifier.py  models.py  rules.py
titan/config/: __init__.py  config_loader.py  frameworks.json  gpu.json  languages.json
titan/examples/: run_titan.md
titan/knowledge/: __init__.py  builder.py  models.py
titan/llm/: __init__.py  base.py  ollama_client.py
titan/models/: __init__.py  analyzer.py  repository.py
titan/opportunity/: __init__.py  engine.py  framework_rules.py  gpu_rules.py
titan/planner/: __init__.py  models.py  parser.py  planner.py  prompts.py
titan/rag/: __init__.py  chunker.py  embedder.py  models.py  query_builder.py  retriever.py  vector_store.py
titan/report/: __init__.py  markdown.py
titan/ui/: __init__.py  console.py
titan/utils/: repository_walker.py
titan/verifier/: __init__.py  models.py  parser.py  prompts.py  verifier.py
